Refactorings (#8)
* DD-1605 Implement several dd-dataverse-cli dataset commands

* DD-1605 Implement several dd-dataverse-cli dataset commands - II

* DD-1605 Implement several dd-dataverse-cli dataset commands - III - Role Assignment commands separated as subcommands

* DD-1605 Implement several dd-dataverse-cli dataset commands - IV - Merged Test Units From Joke

* DD-1605 Implement several dd-dataverse-cli dataset commands - V - Two changes for commnets of Paul

* DD-1605 Implement several dd-dataverse-cli dataset commands - VI - changes for PR reviewers

* generic AbstractAssignmentRole

* DD-1605 Implement several dd-dataverse-cli dataset commands - VII - RoleAssignmnet command with its subcommands

* DD-1605 Implement several dd-dataverse-cli dataset commands - VIII - subcommand remove for RoleAssignmnet command (collection and dataset)

* WIP

* WIP

* Modified package structure

---------

Co-authored-by: Ali Sheikhi <aliassheikh@users.noreply.github.com>
Co-authored-by: jo-pol <jo-pol@users.noreply.github.com>
Co-authored-by: Alias <93505057+aliassheikh@users.noreply.github.com>