@@ -13,31 +13,29 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package nl.knaw.dans.dvcli.command;
+package nl.knaw.dans.dvcli.command.collection;
 
 import lombok.NonNull;
-import lombok.extern.slf4j.Slf4j;
 import nl.knaw.dans.dvcli.action.Pair;
-import nl.knaw.dans.dvcli.action.SingleDatasetOrDatasetsFile;
-import nl.knaw.dans.lib.dataverse.DatasetApi;
+import nl.knaw.dans.dvcli.action.SingleCollectionOrCollectionsFile;
+import nl.knaw.dans.dvcli.command.AbstractSubcommandContainer;
+import nl.knaw.dans.lib.dataverse.DataverseApi;
 import nl.knaw.dans.lib.dataverse.DataverseClient;
 import picocli.CommandLine.Command;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Command(name = "dataset",
+@Command(name = "collection",
          mixinStandardHelpOptions = true,
-         description = "Manage Dataverse datasets")
-@Slf4j
-public class DatasetCmd extends AbstractSubcommandContainer<DatasetApi> {
-    public DatasetCmd(@NonNull DataverseClient dataverseClient) {
+         description = "Manage Dataverse collections (i.e. 'dataverses')")
+public class CollectionCmd extends AbstractSubcommandContainer<DataverseApi> {
+    public CollectionCmd(@NonNull DataverseClient dataverseClient) {
         super(dataverseClient);
     }
 
     @Override
-    protected List<Pair<String, DatasetApi>> getItems() throws IOException {
-        return new SingleDatasetOrDatasetsFile(targets, dataverseClient).getDatasets().collect(Collectors.toList());
+    protected List<Pair<String, DataverseApi>> getItems() throws IOException {
+        return new SingleCollectionOrCollectionsFile(getTargets(), dataverseClient).getCollections().toList();
     }
 }
